# examples

./: .gitignore  README.md
qcustomplot-print-preview/: CMakeLists.txt
qcustomplot-print-preview/qcustomplot/: CMakeLists.txt  core.cpp  core.h  layer.cpp  layout.cpp  plottable1d.h
qcustomplot-print-preview/qcustomplot/axis/: labelpainter.cpp
qcustomplot-print-preview/qcustomplot/layoutelements/: layoutelement-legend.cpp
qcustomplot-print-preview/qcustomplot/plottables/: plottable-graph.cpp
qcustomplot-print-preview/src/: CMakeLists.txt  sample.cpp  sample.h
test-widget/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mywidget.cpp  mywidget.h
